--- a/example/qdoc_templates/index.html
+++ b/example/qdoc_templates/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="qdoc page" />
 		<meta name="author" content="qdoc" />
 		
-		<link rel="stylesheet" href="{{=it.path}}/index.css" />
+		<link rel="stylesheet" href="{{=it.path}}/res/index.css" />
 		<script type="text/javascript" src="{{=it.path}}/autoreload.js"></script>
 	</head>
 	<body>
