--- a/src/editor/client/viewer.html
+++ b/src/editor/client/viewer.html
@@ -35,11 +35,11 @@
 			<iframe>
 			</iframe>
 		</div>
-		<div id="editor">
+		<!--  <div id="editor">
 			<h1>Edit</h1>
 			<div id="editor-content">
 				
-			</div>
+			</div> -->
 		</div>
 	</body>
 </html>
