fix relative path bug

--- a/example/qdoc_templates/index.html
+++ b/example/qdoc_templates/index.html
@@ -7,8 +7,8 @@
 		<meta name="description" content="qdoc page" />
 		<meta name="author" content="qdoc" />
 		
-		<link rel="stylesheet" href="_res/index.css" />
-		<script type="text/javascript" src="_autoreload.js"></script>
+		<link rel="stylesheet" href="{{=it.path}}/_res/index.css" />
+		<script type="text/javascript" src="{{=it.path}}/_autoreload.js"></script>
 	</head>
 	<body>
 		<article>
